--- a/sandbox/chrono/CMakeLists.txt
+++ b/sandbox/chrono/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories (include)
 add_executable (chrono
                 src/main.cpp
                 src/entities/player.cpp
+                src/entities/static_actor.cpp
                 src/scenes/overworld.cpp)
 
 target_link_libraries (chrono
